# rlShaderTest

./: CMakeLists.txt  main.c
resources/shaders/: base.glsl  canny.glsl  preamble.glsl  roberts.glsl
